# osm-meet-your-mappers

./: .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.db  Dockerfile_db  Makefile  README.md  alembic.ini  archive_loader.py  catch_up.py  docker-compose.init.yaml  docker-compose.load.yaml  docker-compose.run.yaml  docker-compose.yaml  docker-compose.yml  historical_load.py  model.py  pyproject.toml  recent_changes_daemon.py  replication.py  requirements.txt  setup.cfg  sync_daemon.py  sync_daemon_v2.py  truncate_db.py
.github/: FUNDING.yml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 4e2c1dbd8817_initial_setup.py  615da3f69d1d_initial_migration.py
docs/: ci-deploy.md
example/: 814.osm
osm_changeset_loader/osm_changeset_loader/: __init__.py  api.py  catch_up.py  config.py  db.py  model.py  path.py  replication.py  state.py
osm_changeset_loader/osm_changeset_loader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
osm_changeset_loader/osm_changeset_loader/static/: about.html  index.html  script.js  style.css
osm_changeset_parser/osm_changeset_parser/: __init__.py  api.py  db.py
osm_meet_your_mappers/: __init__.py  api.py  config.py  db.py  db_utils.py  model.py  parsers.py
osm_meet_your_mappers/static/: about.html  index.html  script.js  style.css
scripts/: archive_loader.py  archive_loader_entrypoint.sh  backfill.py  convert_csv.py  deploy.sh  drop_tables.sql  init_boundaries.py  init_db.sh  init_pg_cron.sh  init_phase.sh  init_user_activity.py  load_admin_boundaries.py  osm-changeset-parser.service  rebuild_db.py  setup_db.sql  truncate_db.py  truncate_tables.py  user_activity_centers.sql
tests/: test_api.py
