[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meet-your-mappers"
version = "1.0.0"
description = "Meet the OpenStreetMap mappers in your area"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Martijn van Exel", email = "m@rtijn.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "psycopg2-binary==2.9.9",
    "fastapi==0.115.8",
    "lxml==5.3.1",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "shapely==2.0.7",
    "SQLAlchemy==2.0.38",
    "python-dotenv==1.0.1",
    "uvicorn==0.34.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
osm_meet_your_mappers = [
    "static/*"
]
