[tool.poetry]
name = "meet-your-mappers"
version = "1.0.3"
description = "Meet the OpenStreetMap mappers in your area"
authors = ["Martijn van Exel <m@rtijn.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "osm_meet_your_mappers"}]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "2.9.9"
tomli = "^2.0.1"
fastapi = "0.115.8"
lxml = "5.3.1"
PyYAML = "6.0.2"
requests = "2.32.3"
shapely = "2.0.7"
python-dotenv = "1.0.1"
uvicorn = "0.34.0"
asyncpg = "0.29.0"
aiofiles = "23.2.1"
httpx = "0.27.0"
itsdangerous = "^2.2.0"
authlib = "^1.4.1"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
isort = "^5.12"
pytest = "^8.0"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
