[metadata]
name = meet-your-mappers
version = 1.0.5
description = Meet the OpenStreetMap mappers in your area
long_description = file: README.md
long_description_content_type = text/markdown
author = Martijn van Exel
author_email = m@rtijn.org
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.9
install_requires =
    psycopg2-binary==2.9.9
    fastapi==0.115.8
    lxml==5.3.1
    PyYAML==6.0.2
    requests==2.32.3
    shapely==2.0.7
    python-dotenv==1.0.1
    uvicorn==0.34.0
    asyncpg==0.29.0
    aiofiles==23.2.1
    httpx==0.27.0
    itsdangerous>=2.2.0,<3.0.0
    authlib>=1.4.1,<2.0.0

[options.extras_require]
dev =
    black>=24.0,<25.0
    isort>=5.12,<6.0
    pytest>=8.0,<9.0
    pytest-cov>=5.0,<7.0
