[metadata]
name = meet-your-mappers
version = 1.0.10
description = Meet the OpenStreetMap mappers in your area
long_description = file: README.md
long_description_content_type = text/markdown
author = Martijn van Exel
author_email = m@rtijn.org
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.9
install_requires =
    psycopg2-binary==2.9.10
    fastapi==0.115.11
    lxml==5.3.2
    PyYAML==6.0.2
    requests==2.32.3
    shapely==2.0.7
    python-dotenv==1.0.1
    uvicorn==0.34.0
    asyncpg==0.30.0
    aiofiles==24.1.0
    httpx==0.28.1
    itsdangerous>=2.2.0,<3.0.0
    authlib>=1.4.1,<2.0.0

[options.extras_require]
dev =
    black>=24.0,<26.0
    isort>=5.12,<7.0
    pytest>=8.0,<9.0
    pytest-cov>=5.0,<7.0
